--- a/ResidentSleeper/ClientApp/package.json
+++ b/ResidentSleeper/ClientApp/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
@@ -19,7 +22,7 @@
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
-    "ajv": "^6.9.1",
+    "ajv": "^6.12.6",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
